feat: fix Liquibase generation (JSONB defaults, index direction, timestamp mapping)